Causeview Package Complete/ant script/retrieveUnpackaged/objects/Event_Attendee__c.object
<CustomObject>
    <description>Causeview - No longer required.</description>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Event_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Event_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipName>Event_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>(DEPRECATED)</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Event Attendance No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(DEPRECATED)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>